# pdf-benchmark

./: .gitignore  README.md  evaluate_outputs.py  get_gold.py  plot_benchmark.py  price.jsonl  pyproject.toml  run_pipelines.py
pdfs/: paper_ids.csv
pdfs/gold_set/: 1706.03762v7.json  1959-09865-001.json  2020.acl-main.704.json  2020.emnlp-main.550.json  2106.09685v2.json  2303.18223v19.json  He_Deep_Residual_Learning_CVPR_2016_paper.json  gold.jsonl
scripts/: evaluate-benchmark  get-gold  plot-benchmark  run-benchmark
